# boltdbt_pipeliner

./: .gitignore  CHANGELOG.md  README.md  etl_base.py  generate.py  main.py  pyproject.toml  requirements.txt  spark_session.py
.github/workflows/: ci.yml  release.yml
airflow_templates/: dag.txt  emrcontaineroperator.txt  serverless_dag.py  spark_config.txt
configs/: etl_config.yaml  style_config.yaml
etl/1_silver/: silver_fct_state_gas_cpi_monthly.py
etl/_flatfile/: flatfile_digital_session_transaction_raw.py  flatfile_gas_prices.py
etl_base_classes/: etl_bases.py
examples/: README.md
examples/demo/: README.md
examples/demo/configs/: etl_config.yaml  style_config.yaml
examples/demo/etl/_flatfile/: flatfile_cpi_regional.py  flatfile_storm_events.py
examples/demo_pandas/: README.md
examples/demo_pandas/bases/: __init__.py  local_pandas_parquet.py
examples/demo_pandas/configs/: etl_config.yaml  style_config.yaml
examples/demo_pandas/data/raw/: .gitkeep
examples/demo_pandas/etl/: __init__.py
examples/demo_pandas/etl/0_bronze/: __init__.py  bronze_crashes.py  bronze_persons.py  bronze_vehicles.py
examples/demo_pandas/etl/1_silver/: __init__.py  silver_collision_features.py  silver_person_crash_features.py  silver_vehicle_crash_features.py
examples/demo_pandas/etl/2_gold/: gold_collision_training_set.py
examples/demo_pandas/etl/3_diamond/: __init__.py  diamond_collision_injury_model.py
examples/demo_pandas/etl/_flatfile/: flatfile_crashes.py  flatfile_persons.py  flatfile_vehicles.py
examples/demo_polars/: .gitignore  README.md
examples/demo_polars/bases/: __init__.py  local_polars_parquet.py
examples/demo_polars/configs/: etl_config.yaml  style_config.yaml
examples/demo_polars/etl/: __init__.py
examples/demo_polars/etl/0_bronze/: bronze_crashes.py  bronze_persons.py  bronze_vehicles.py
examples/demo_polars/etl/1_silver/: silver_collision_features.py  silver_person_crash_features.py  silver_vehicle_crash_features.py
examples/demo_polars/etl/2_gold/: gold_collision_training_set.py
examples/demo_polars/etl/3_diamond/: diamond_collision_injury_model.py
examples/demo_polars/etl/_flatfile/: flatfile_crashes.py  flatfile_persons.py  flatfile_vehicles.py
examples/demo_polars/scripts/: download_nyc_collision_data.py
examples/demo_spark/: .gitignore  README.md
examples/demo_spark/bases/: __init__.py  local_spark_parquet.py
examples/demo_spark/configs/: etl_config.yaml  style_config.yaml
examples/demo_spark/configs/spark/: local.toml
examples/demo_spark/etl/: __init__.py
examples/demo_spark/etl/0_bronze/: bronze_crashes.py  bronze_persons.py  bronze_vehicles.py
examples/demo_spark/etl/1_silver/: silver_collision_features.py  silver_person_crash_features.py  silver_vehicle_crash_features.py
examples/demo_spark/etl/2_gold/: __init__.py  gold_collision_training_set.py
examples/demo_spark/etl/3_diamond/: diamond_collision_injury_model.py
examples/demo_spark/etl/_flatfile/: __init__.py  flatfile_crashes.py  flatfile_persons.py  flatfile_vehicles.py
scripts/: generate_airflow_dags_code.py  generate_documentation.py  generate_layers.py  generate_notebook.py
src/bolt_pipeliner/: __init__.py  runner.py
src/bolt_pipeliner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bolt_pipeliner/bases/: pandas_parquet.py  polars_parquet.py  spark_delta.py  spark_iceberg.py  spark_parquet.py
src/bolt_pipeliner/cli/: app.py  generate.py  init.py  run.py  test.py
src/bolt_pipeliner/config/: __init__.py  loader.py
src/bolt_pipeliner/generators/: __init__.py  airflow.py  documentation.py  layers.py  notebook.py  snowflake_ddl.py
src/bolt_pipeliner/templates/airflow/: dag.txt
src/bolt_pipeliner/templates/docs/: etl_base_html.txt  index.txt  mermaid_page.txt
src/bolt_pipeliner/testing/: checks.py  runner.py
template/: job_etl_base_loading.txt  job_script.txt
tests/: conftest.py  test_airflow_generator.py  test_cli_generate.py  test_cli_init.py  test_cli_run.py  test_config_loader.py  test_data_checks.py  test_generators_paths.py  test_notebook_generator.py  test_package_imports_lazily.py  test_pandas_parquet_base.py  test_runner.py  test_selection.py  test_spark_profiles.py
